RbA Developer Org/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Dhruvsoft__IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Color__c</fullName>
        <label>Interior Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>